assets/css/style.css
body, *{
    font-family: 'Poppins', sans-serif;
}

html {
    width: 100%;
    height: 100%;
}

.text-center {
    text-align: center;
}

#body-construcao {
    width: 100%;
    height: 100vh;
    background-image: url('../img/bg-construcao.jpg') !important;
    background-position: center center !important;
    background-attachment: fixed !important;
    background-size: cover !important; 
    padding: 36px;
    backdrop-filter: blur(5px);
}

.main {
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: space-around;
    flex-direction: column;
    align-content: center;
}

.main h1 img {
    max-width: 100%;
}


.btn-center {
    font-size: 16px;
    font-weight: 700 !important;
    border-radius: 8px;
    padding: 10px 20px;
    background-color: #F22727 !important;
}

.btn-center:hover, 
.btn-center:active {
    background-color: #C02020 !important;
}

.main h3 {
    font-weight: 500;
    font-size: 18px;
    line-height: 27px;
    color: #F22727;
    margin-top: 50px;
}

.main h3 strong{
    font-weight: 700;
    font-size: 19px;
}

.text-redes {
    margin-top: 30px;
    margin-bottom: 5px;
    font-weight: 400;
    font-size: 12px;
}

.redes {
    display: flex;
    justify-content: space-between;
    max-width: 160px;
    margin: 0 auto;
}

